--- a/index.html
+++ b/index.html
@@ -86,6 +86,40 @@
       <a href="contact.html" class="block py-1 hover:text-cyan-400">Contact</a>
     </div>
   </header>
+   <!-- Hero Section -->
+<section class="pt-32 pb-20 px-6 animate__animated animate__fadeIn">
+  <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+    <div>
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-6" data-i18n="greeting">
+        Hi, I'm <span class="text-cyan-400">Anshika Singh</span>
+      </h2>
+      <p class="text-lg text-gray-300 mb-6" data-i18n="intro">
+        A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, 
+        <span class="text-blue-400 font-semibold">AI</span>, and 
+        <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
+      </p>
+      <p class="text-base text-gray-400 mb-4 leading-relaxed" data-i18n="values">
+        I consistently submit my work on time and uphold a strong sense of responsibility and honesty 
+        in every project I take on. I focus on maintaining quality and meeting deadlines while staying 
+        true to my values and work ethic. I believe in delivering high-quality results through consistency 
+        and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
+      </p>
+      <div class="flex flex-wrap gap-4">
+        <a href="assets/assets/images/Anshika Singh final 1.pdf" target="_blank"
+           class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
+        <a href="web-projects.html"
+           class="px-6 py-3 rounded-full border border-cyan-400 text-cyan-400 hover-invert button-hover">🌐 Web Projects</a>
+        <a href="ml-projects.html"
+           class="px-6 py-3 rounded-full border border-yellow-300 text-yellow-300 hover:bg-yellow-300 hover:text-black button-hover">🤖 AIML Projects</a>
+      </div>
+    </div>
+    <div class="text-center">
+      <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh"
+           class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 mx-auto rounded-full object-cover border-4 border-cyan-400 shadow-2xl animate__animated animate__zoomIn" />
+    </div>
+  </div>
+</section>
+
 
   <!-- JavaScript for Navbar & Translation -->
   <script>
