--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <!-- Favicon -->
   <link rel="icon" href="assets/assets/images/Anshika.jpg" type="image/jpg" />
 
-  <!-- SEO Meta Tags -->
   <meta name="description" content="Anshika Singh | AIML & Web Developer Portfolio" />
   <meta name="author" content="Anshika Singh" />
 
@@ -22,36 +21,30 @@
     html {
       scroll-behavior: smooth;
     }
-
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-
     #particles-js {
       position: fixed;
       width: 100%;
       height: 100%;
       z-index: -1;
     }
-
     a.button-hover {
       transition: all 0.3s ease;
     }
-
     a.button-hover:hover {
       transform: scale(1.05);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
-
     .hover-invert:hover {
       background-color: white;
       color: black;
     }
   </style>
 </head>
-<body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
 
-  <!-- Particles Container -->
+<body class="bg-gradient-to-b from-black via-gray-900 to-gray-800 text-white">
   <div id="particles-js"></div>
 
   <!-- Navbar -->
@@ -86,45 +79,6 @@
       <a href="contact.html" class="block py-1 hover:text-cyan-400">Contact</a>
     </div>
   </header>
-
-  <script>
-  // Wait until all DOM is loaded
-  document.addEventListener("DOMContentLoaded", function () {
-    // Navbar toggle for mobile
-    const menuToggleBtn = document.getElementById("menuToggleBtn");
-    const mobileMenu = document.getElementById("mobileMenu");
-
-    menuToggleBtn.addEventListener("click", function () {
-      mobileMenu.classList.toggle("hidden");
-    });
-
-    // Language Switcher
-    const translations = {
-      hi: {
-        greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
-        intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> करता है।",
-        values: "मैं समय पर काम जमा करती हूँ और हर प्रोजेक्ट में ईमानदारी और ज़िम्मेदारी से काम करती हूँ।"
-      },
-      en: {
-        greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
-        intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-        values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty..."
-      }
-    };
-
-    const langSwitcher = document.getElementById("langSwitcher");
-    langSwitcher.addEventListener("change", function () {
-      const selectedLang = this.value;
-      document.querySelectorAll("[data-i18n]").forEach((element) => {
-        const key = element.getAttribute("data-i18n");
-        if (translations[selectedLang] && translations[selectedLang][key]) {
-          element.innerHTML = translations[selectedLang][key];
-        }
-      });
-    });
-  });
-</script>
-
 
   <!-- Hero Section -->
   <section class="pt-32 pb-20 px-6 animate__animated animate__fadeIn">
@@ -180,42 +134,39 @@
     <p class="text-gray-500">© 2025 Anshika Singh • AIML & Web Developer | Crafted with ❤️</p>
   </footer>
 
-  <!-- Scripts -->
-<!--   <script>
+  <!-- JavaScript: Mobile Toggle + Language Switch -->
+  <script>
     document.addEventListener("DOMContentLoaded", function () {
-      // Mobile menu toggle
       const menuToggleBtn = document.getElementById("menuToggleBtn");
       const mobileMenu = document.getElementById("mobileMenu");
       menuToggleBtn.addEventListener("click", function () {
         mobileMenu.classList.toggle("hidden");
       });
- -->
-<!--   //     // Language switcher
-  //     const translations = {
-  //       hi: {
-  //         greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
-  //         intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> में काम करता है।",
-  //         values: "मैं हमेशा समय पर काम जमा करती हूँ और हर परियोजना में जिम्मेदारी और ईमानदारी बनाए रखती हूँ। गुणवत्ता बनाए रखते हुए समय सीमा का पालन करना मेरी प्राथमिकता है। मैं रचनात्मकता, नवाचार और ईमानदारी के साथ विचारों को साकार करने का प्रयास करती हूँ।"
-  //       },
-  //       en: {
-  //         greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
-  //         intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
-  //         values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
-  //       }
-  //     };
 
-  //     const langSwitcher = document.getElementById('langSwitcher');
-  //     langSwitcher.addEventListener('change', function () {
-  //       const lang = this.value;
-  //       document.querySelectorAll('[data-i18n]').forEach(el => {
-  //         const key = el.getAttribute('data-i18n');
-  //         if (translations[lang] && translations[lang][key]) {
-  //           el.innerHTML = translations[lang][key];
-  //         }
-  //       });
-  //     });
-  //   });
-  // </script> -->
+      const translations = {
+        hi: {
+          greeting: "नमस्ते, मैं हूँ <span class='text-cyan-400'>अंशिका सिंह</span>",
+          intro: "एक समर्पित डेवलपर जो <span class='text-purple-400 font-semibold'>एमएल</span>, <span class='text-blue-400 font-semibold'>एआई</span>, और <span class='text-yellow-300 font-semibold'>वेब डेवलपमेंट</span> करता है।",
+          values: "मैं समय पर काम जमा करती हूँ और हर प्रोजेक्ट में ईमानदारी और ज़िम्मेदारी से काम करती हूँ।"
+        },
+        en: {
+          greeting: "Hi, I'm <span class='text-cyan-400'>Anshika Singh</span>",
+          intro: "A passionate developer blending <span class='text-purple-400 font-semibold'>ML</span>, <span class='text-blue-400 font-semibold'>AI</span>, and <span class='text-yellow-300 font-semibold'>Web Development</span> using modern tools.",
+          values: "I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity."
+        }
+      };
+
+      document.getElementById("langSwitcher").addEventListener("change", function () {
+        const lang = this.value;
+        document.querySelectorAll("[data-i18n]").forEach(el => {
+          const key = el.getAttribute("data-i18n");
+          if (translations[lang][key]) {
+            el.innerHTML = translations[lang][key];
+          }
+        });
+      });
+    });
+  </script>
 
   <!-- Particles.js -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
