--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       background-color: white;
       color: black;
     }
+    header, section, footer {
+  position: relative;
+  z-index: 10;
+}
+
   </style>
 </head>
 
