--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
   <!-- Particles Background -->
   <div id="particles-js" class="fixed w-full h-full top-0 left-0 z-0 pointer-events-none"></div>
 
-  <!-- INTRO SPLASH SCREEN -->
+  <!-- Splash Screen -->
   <div id="introScreen" class="text-center text-white">
     <h1 class="text-5xl md:text-7xl font-extrabold animate__animated animate__fadeInDown">
       Anshika Singh
     </h1>
     <h2 id="professionText" class="text-2xl md:text-3xl font-medium mt-6 animate__animated" style="display: none;">
-      ML & Web Developer
+      AI|ML & Web Developer
     </h2>
   </div>
 
-  <!-- MAIN CONTENT -->
+  <!-- Main Content -->
   <div id="mainContent">
     <!-- Navbar -->
     <header class="fixed top-0 left-0 w-full z-50 bg-black text-white shadow-md">
@@ -62,7 +62,6 @@
           Anshika Singh
         </h1>
         <nav class="hidden md:flex space-x-6 text-gray-200 font-medium">
-          <a href="#" class="hover:text-cyan-400">Home</a>
           <a href="techstack.html" class="hover:text-cyan-400">Tech Stack</a>
           <a href="ml-projects.html" class="hover:text-cyan-400">ML Projects</a>
           <a href="web-projects.html" class="hover:text-cyan-400">Web Projects</a>
@@ -72,7 +71,6 @@
         <button id="menuToggleBtn" class="md:hidden text-white text-2xl">☰</button>
       </div>
       <div id="mobileMenu" class="hidden md:hidden px-6 pb-4 text-sm text-gray-200">
-        <a href="#" class="block py-1 hover:text-cyan-400">Home</a>
         <a href="techstack.html" class="block py-1 hover:text-cyan-400">Tech Stack</a>
         <a href="ml-projects.html" class="block py-1 hover:text-cyan-400">ML Projects</a>
         <a href="web-projects.html" class="block py-1 hover:text-cyan-400">Web Projects</a>
@@ -97,9 +95,33 @@
           <img src="assets/assets/images/Anshika.jpg" alt="Anshika Singh" class="w-72 h-72 rounded-full object-cover border-4 border-cyan-400 shadow-xl animate__animated animate__zoomIn" />
         </div>
       </div>
+
+      <!-- Nav Cards -->
+      <div class="mt-16 max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 text-center">
+        <a href="techstack.html" class="bg-gray-800/50 backdrop-blur-sm border border-blue-400 text-white p-6 rounded-xl shadow-lg hover:shadow-blue-400/30 hover:scale-105 transition">
+          <h4 class="text-xl font-semibold mb-2">🛠️ Tech Stack</h4>
+          <p class="text-sm text-gray-300">Languages, tools & frameworks I use</p>
+        </a>
+        <a href="ml-projects.html" class="bg-gray-800/50 backdrop-blur-sm border border-purple-500 text-white p-6 rounded-xl shadow-lg hover:shadow-purple-500/30 hover:scale-105 transition">
+          <h4 class="text-xl font-semibold mb-2">🤖 ML Projects</h4>
+          <p class="text-sm text-gray-300">Explore my machine learning work</p>
+        </a>
+        <a href="web-projects.html" class="bg-gray-800/50 backdrop-blur-sm border border-pink-400 text-white p-6 rounded-xl shadow-lg hover:shadow-pink-400/30 hover:scale-105 transition">
+          <h4 class="text-xl font-semibold mb-2">🌐 Web Projects</h4>
+          <p class="text-sm text-gray-300">Frontend & Fullstack builds</p>
+        </a>
+        <a href="certificates.html" class="bg-gray-800/50 backdrop-blur-sm border border-yellow-300 text-white p-6 rounded-xl shadow-lg hover:shadow-yellow-300/30 hover:scale-105 transition">
+          <h4 class="text-xl font-semibold mb-2">📜 Certificates</h4>
+          <p class="text-sm text-gray-300">My achievements & recognitions</p>
+        </a>
+        <a href="contact.html" class="bg-gray-800/50 backdrop-blur-sm border border-green-400 text-white p-6 rounded-xl shadow-lg hover:shadow-green-400/30 hover:scale-105 transition">
+          <h4 class="text-xl font-semibold mb-2">📩 Contact</h4>
+          <p class="text-sm text-gray-300">Let’s collaborate or connect!</p>
+        </a>
+      </div>
     </section>
 
-    <!-- Connect With Me Section -->
+    <!-- Connect With Me -->
     <section class="relative z-10 py-20 px-6">
       <div class="max-w-6xl mx-auto">
         <h3 class="text-3xl md:text-4xl font-bold text-center text-cyan-300 mb-12 animate__animated animate__fadeInDown">🔗 Connect with Me</h3>
@@ -136,13 +158,11 @@
       const profession = document.getElementById("professionText");
       const mainContent = document.getElementById("mainContent");
 
-      // Show profession after 2 seconds
       setTimeout(() => {
         profession.style.display = "block";
         profession.classList.add("animate__fadeInUp");
       }, 2000);
 
-      // Show main site after 4 seconds
       setTimeout(() => {
         intro.style.opacity = "0";
         mainContent.style.opacity = "1";
